# PR7M3

./: .gitignore  pyproject.toml
L1 Intro/config/: settings.py  urls.py
L1 Intro/myapp/: urls.py  views.py
L1 Intro/myapp/templates/: hello_world.html
L10/blog/: models.py
L11/blog/: admin.py  models.py  views.py
L11/config/: settings.py
L11/users/: urls.py
L12/blog/: forms.py  views.py
L13/blog/: forms.py  models.py  urls.py  views.py
L13/config/: settings.py
L14/blog/: views.py
L14/config/: settings.py
L14/templates/: base.html
L14/users/: views.py
L15/blog/: views.py
L15/config/: settings.py
L15/users/: urls.py  views.py
L16/blog/: urls.py  views.py
L16/config/: settings.py
L16/templates/: base.html
L16/users/: urls.py  views.py
L17/blog/: models.py  views.py
L17/config/: settings.py
L17/users/: forms.py  urls.py  views.py
L18/blog/: forms.py  mixins.py
L18/config/: settings.py  urls.py
L18/users/: urls.py
L19/blog/: models.py
L2/my_awesome_project/: .gitignore  README.md  docker-compose.local.yml  docker-compose.production.yml  pyproject.toml
L20/blog/: urls.py  validators.py
L20/config/: settings.py
L21/blog/: models.py  views.py
L21/config/: settings.py
L21/users/: forms.py  views.py
L22/blog/: apps.py  mixins.py
L22/users/: forms.py  views.py
L3/blog/: urls.py  views.py
L3/users/: views.py
L4/blog/: models.py
L4/config/: settings.py  urls.py
L7/blog/: models.py  urls.py  views.py
L7/users/: urls.py
L8/blog/: models.py
L8/config/: settings.py
L9/blog/: models.py  urls.py  views.py
(+102 files in other folders)
