[project]
name = "m3pyrockstars"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "cookiecutter>=2.6.0",
    "django>=6.0.1",
    "django-extensions>=4.1",
    "django-unfold>=0.81.0",
    "djangorestframework>=3.17.1",
    "ipython>=9.10.0",
    "python-dotenv>=1.2.1",
]
